fix overflow-y problem

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -18,7 +18,6 @@ html {
   //make font-size to be 10px 62.5% * 16 = 10
   //so now rem = 10px -> easy to calculate margin/paddin/etc...
   font-size: 62.5%;
-  overflow-y: hidden;
 
   &::-webkit-scrollbar {
     display: none;
@@ -45,7 +44,6 @@ html {
 body {
   /* set the box size in all elements to border-box thanks to *{} */
   box-sizing: border-box;
-  overflow-y: hidden;
 
   @include respond(tab-port) {
     // padding: 0;
