--- a/sass/layout/_homepage.scss
+++ b/sass/layout/_homepage.scss
@@ -25,7 +25,7 @@ main {
   @include respond(mini-desktop) {
     background-size: 75%;
     padding: 6rem 0rem 3rem;
-    // overflow: hidden;
+    height: auto;
   }
 }
 .header {
